# made

./: Cargo.toml  README.md  build.rs
assets/: made.exe.manifest.rc
src/: config.rs  main.rs  pinyin.rs  single_instance.rs  util.rs
