[package]
name = "made"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# 命令行界面
ratatui = "0.30.0"
crossterm = "0.29.0"
# 托盘图标
tray-icon = "0.21.3"
# 配置序列化
serde= { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
# 拼音匹配
ib-pinyin = "0.3.1"
# 剪切板
arboard = "3.6.1"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Registry",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading"
]

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true